[package]
name = "ddc"
version = "0.3.0" # keep in sync with html_root_url
authors = ["arcnmx"]
edition = "2021"

description = "DDC/CI monitor control"
keywords = ["ddc", "mccs", "vcp", "vesa"]
categories = ["hardware-support"]

documentation = "https://docs.rs/ddc/"
repository = "https://github.com/arcnmx/ddc-rs"
readme = "README.md"
license = "MIT"

include = [
	"/src/**/*.rs",
	"/README*",
	"/COPYING*",
]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
mccs = "0.1"
