[package]
name = "ddc"
version = "0.2.3" # keep in sync with html_root_url
authors = ["arcnmx"]

description = "DDC/CI monitor control"
keywords = ["ddc", "mccs", "vcp", "vesa"]
categories = ["hardware-support"]

documentation = "https://docs.rs/ddc/"
repository = "https://github.com/arcnmx/ddc-rs"
readme = "README.md"
license = "MIT"

include = [
	"/src/**/*.rs",
	"/README*",
	"/COPYING*",
]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
mccs = "0.1"
